[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "mbench"
version = "0.1.1"
description = "CUDA matmul benchmark script"
authors = [
    {name = "lihaoyun6", email = "lihaoyun11@gmail.com"}
]
dependencies = [
    "torch",
    "argparse",
    "pandas",
    "tabulate"
]

[project.scripts]
mbench = "mbench.cli:main"